# cppcon17

./: CMakeLists.txt  README.md  best_practices_notes.odt  cppcon_notes.odt
best_practices/: CMakeLists.txt  bp_main.cc
random_notes/: CMakeLists.txt  notes_main.cc
src/: cust.h  main.cc
